style: add font preload and update related stylesheet links in _document.tsx to resolve font not applying and remove Nanumsqaure for improved readability

--- a/public/fonts/style.css
+++ b/public/fonts/style.css
@@ -1,4 +1,4 @@
-  @font-face {
+  /* @font-face {
     font-family: "NanumSquare";
     src: url('/fonts/NanumSquare/NanumSquareR.woff2') format("woff2"),
     url('/fonts/NanumSquare/NanumSquareR.woff') format("woff"),
@@ -24,7 +24,7 @@
     font-display: auto;
     font-weight: 300;
     font-style: normal;
-  }
+  } */
   
   @font-face {
     font-family: 'Binggrae-Two';
